--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1701,7 +1701,7 @@
       .carousel__track {
         .carousel__slide {
           .slider-wrapper {
-            max-width: 387px;
+            max-width: 100%;
             background: $bg-color-01;
             background-blend-mode: normal;
             margin: 0 19px 0 0;
