--- a/src/assets/scss/_standard.scss
+++ b/src/assets/scss/_standard.scss
@@ -1,34 +1,32 @@
 $screen-xs: 767px;
 
-$work-sans: 'Work Sans';
+$work-sans: "Work Sans";
 
 /****variables*****/
 //#5e2b19
 
-$primary-color-01: #03001C;
-$primary-color-02: rgba(#163b5d, 0.7);
-$secondary-color-01: #1a45dc;
+$primary-color-01: #03001c;
+$primary-color-02: rgba(#ad6adc, 0.7);
+$secondary-color-01: rgba(#ad6adc, 0.3);
 
-$secondary-color-02: #5B8FB9;
-$text-color-01: #B6EADA;
-$bg-color-01: #0D1B23;
-$border-color: #A7A7A7;
+$secondary-color-02: #5b8fb9;
+$text-color-01: #b6eada;
+$bg-color-01: #0d1b23;
+$border-color: #a7a7a7;
 $border-color-02: #354148;
-$border-color-03: #101E26;
-$lt-blue: #1877F2;
-$sky-blue: #1DA1F2;
+$border-color-03: #101e26;
+$lt-blue: #1877f2;
+$sky-blue: #1da1f2;
 $red: #251887;
 $dark-red: #251887;
-$orange: #FC8B59;
-$purple: #C29FEF;
+$orange: #fc8b59;
+$purple: #c29fef;
 
-
-$primary-gradiant: linear-gradient(180deg, #061821, #233B48);
-$secondary-gradiant: linear-gradient(180deg, #ffffff, #ECECEC 20%, #808080 55%);
+$primary-gradiant: linear-gradient(180deg, #cdc3ea, #ad6adc);
+$secondary-gradiant: linear-gradient(180deg, #ad6adc, #ececec 20%, #b27c66 55%);
 
 $white: #fff;
 $black: #000;
-
 
 /****** scroll-bar ******/
 html {
@@ -47,7 +45,6 @@ body {
   &::-webkit-scrollbar {
     display: none;
   }
-
 
   &.active {
     @media only screen and (max-width: 1024px) {
@@ -92,7 +89,8 @@ h1 {
   }
 }
 
-h2, .h2 {
+h2,
+.h2 {
   font-family: $work-sans;
   font-size: 35px;
   line-height: 37px;
@@ -121,7 +119,6 @@ h2, .h2 {
   }
 }
 
-
 h3 {
   font-family: $work-sans;
   color: $white;
@@ -140,7 +137,6 @@ h3 {
       font-size: 18px;
     }
   }
-
 }
 
 // h4 {
@@ -151,7 +147,8 @@ h3 {
 //   color: $metallic-black;
 // }
 
-p, .p {
+p,
+.p {
   font-family: $work-sans;
   font-size: 20px;
   line-height: 25px;
@@ -176,9 +173,7 @@ p, .p {
     line-height: 22px;
     margin: 0;
   }
-
 }
-
 
 a {
   font-family: $work-sans;
@@ -198,7 +193,11 @@ a {
     font-size: 55px;
     line-height: 91px;
     font-weight: 500;
-    color: $white;
+    background-image: linear-gradient(90deg,red, yellow);
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+
     @media screen and (max-width: 1200px) and(min-width: 768px) {
       font-size: 40px;
       line-height: 55px;
@@ -212,18 +211,19 @@ a {
       content: "";
       position: absolute;
       width: 0;
+      height: 1px;
       left: 0;
       bottom: 0;
       transition: all 0.3s ease-in-out;
-      border-bottom: 2px dotted $white;
-
+      // border-bottom: 2px dotted transparent;
+      background-image: linear-gradient(90deg,yellow,red );
+      border-image-slice: 1;
     }
   }
 
   span {
     font-size: 18px;
     line-height: 30px;
-
   }
 
   &.large {
@@ -292,7 +292,7 @@ strong {
   border-radius: 10px;
   border: 1px solid $secondary-color-01;
   text-decoration: none;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   font-size: 20px;
   line-height: 0;
   font-weight: 600;
@@ -308,8 +308,8 @@ strong {
   }
 
   &:after {
-    content: '';
-    background:  $secondary-color-01;
+    content: "";
+    background: $secondary-color-01;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -459,19 +459,17 @@ strong {
 
     &:focus {
       box-shadow: none;
-
-
     }
   }
 }
 
 // /****** Colored Icon ******/
 .fa-google {
-  background: linear-gradient(to bottom left, transparent 49%, #fbbc05 50%) 0 25%/48% 40%,
-  linear-gradient(to top left, transparent 49%, #fbbc05 50%) 0 75%/48% 40%,
-  linear-gradient(-40deg, transparent 53%, #ea4335 54%),
-  linear-gradient(45deg, transparent 46%, #4285f4 48%),
-  #34a853;
+  background: linear-gradient(to bottom left, transparent 49%, #fbbc05 50%) 0
+      25%/48% 40%,
+    linear-gradient(to top left, transparent 49%, #fbbc05 50%) 0 75%/48% 40%,
+    linear-gradient(-40deg, transparent 53%, #ea4335 54%),
+    linear-gradient(45deg, transparent 46%, #4285f4 48%), #34a853;
   background-repeat: no-repeat;
   -webkit-background-clip: text;
   color: transparent;
@@ -480,7 +478,6 @@ strong {
 
 // /****custom-classes*****/
 
-
 .custom-flex {
   display: flex;
   align-items: center;
@@ -488,7 +485,7 @@ strong {
 }
 
 .material-symbols-outlined {
-  font-family: 'Material Symbols Outlined', serif;
+  font-family: "Material Symbols Outlined", serif;
   font-weight: normal;
   font-style: normal;
   font-size: 24px; /* Preferred icon size */
@@ -500,7 +497,6 @@ strong {
   white-space: nowrap;
   direction: ltr;
 }
-
 
 #loading-wrapper {
   display: none;
