--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -95,7 +95,7 @@
         font-family: inherit;
         background: transparent;
         overflow: hidden;
-        margin-top: 10px;
+        margin-top: 20px;
         &:before {
           content: "About me";
           position: absolute;
@@ -139,16 +139,13 @@
             opacity: 1;
           }
         }
-        // @media only screen and (max-width: $screen-xs) {
-        //   position: fixed;
-        //   left: 0;
-        //   right: 0;
-        //   margin: 0 auto;
-        //   bottom: 15%;
-        //   border: 1px solid $secondary-color-01;
-        //   text-decoration: none;
-        //   background: $secondary-color-01;
-        // }
+        @media only screen and (max-width: $screen-xs) {
+          position: fixed;
+          left: 0;
+          right: 0;
+          margin: 0 auto;
+          bottom: 5%;
+        }
 
         //&:hover {
         //  background: transparent;
