--- a/src/assets/scss/_standard.scss
+++ b/src/assets/scss/_standard.scss
@@ -282,7 +282,7 @@ strong {
 /****** Buttons ******/
 .btn-style {
   position: relative;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   text-align: center;
