--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -29,7 +29,7 @@
       max-width: 217px;
       position: fixed;
       z-index: 9;
-      left: 3%px;
+      left: 3%;
       top:3%;
       display: block;
       @media only screen and (max-width: $screen-xs) {
